fix header title unvisible issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,8 +86,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .header-name {
-  display: none;
-  opacity: 0;
+  /* display: none; */
+  opacity: 1;
+  /* opacity: 0; */
   overflow: hidden;
 }
 
@@ -118,7 +119,7 @@ nav {
   user-select: none;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .sticky-nav-full {
     @apply max-w-full border-b border-opacity-50 border-gray-200 dark:border-gray-600 dark:border-opacity-50;
   }
